fixing maven (was unaware of proper source folder paths)

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,9 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/java/main</sourceDirectory>
+        <testSourceDirectory>src/java/test</testSourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
