--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,22 @@
     <build>
         <sourceDirectory>src/java/main</sourceDirectory>
         <testSourceDirectory>src/java/test</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>resources/native/win32</directory>
+            </resource>
+        </resources>
 
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>2.5</version>
             </plugin>
 
             <!-- Java compiler version -->
