--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
                 <directory>resources/native/win32</directory>
             </resource>
         </resources>
+        <testResources>
+            <testResource>
+                <directory>resources/test</directory>
+            </testResource>
+        </testResources>
 
         <plugins>
             <plugin>
