--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <dependencies>
 
+        <!-- JNA -->
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
@@ -24,29 +25,18 @@
             <classifier>platform</classifier>
         </dependency>
 
-        <!-- These dependencies are here just for enabling logging -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.5.6</version>
-        </dependency>
+        <!-- LOGGING -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.5.6</version>
         </dependency>
 
-        <!-- Test scope -->
+        <!-- TESTING -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock</artifactId>
-            <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -96,43 +86,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <!-- Specify hard-coded project properties here -->
-    <properties>
-        <!--
-            This is just for "eclipse:eclipse" goal to always attempt
-            downloading sources
-        -->
-        <downloadSources>true</downloadSources>
-    </properties>
-
-    <repositories>
-        <repository>
-            <id>mvnsearch.org</id>
-            <name>MVN Search</name>
-            <url>http://www.mvnsearch.org/maven2</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-                <checksumPolicy>warn</checksumPolicy>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>java.net</id>
-            <name>java.net</name>
-            <url>http://download.java.net/maven/2</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-                <checksumPolicy>warn</checksumPolicy>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
 </project>
