--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
         <!-- LOGGING -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.5.6</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <!-- TESTING -->
