fix MinMaxAnalyzer not to shuffle limits it already shuffled before (previous optimization broken)

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>16.0.1</version>
+        </dependency>
+
         <!-- JNA -->
         <dependency>
             <groupId>net.java.dev.jna</groupId>
